# python-practice

./: .gitignore  app.py  meta.yaml
services/server-side/: pyproject.toml
services/server-side/src/server_side/: helpers.py  main.py
services/server-side/src/server_side.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
